<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".DetailActivity">

        <ImageView
            android:id="@+id/img_photo_wisata_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tv_nama_tempat_wisata_detail"
            style="@style/TextContent.HeadlineMedium.Bold"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            tools:text="@string/place_name"/>

        <TextView
            android:id="@+id/tv_deskripsi_wisata_detail"
            style="@style/TextContent.BodyMedium.Gray.MarginLeftRight"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            tools:text="@string/description"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextContent.BodyMedium.Bold"
                    android:layout_marginEnd="16dp"
                    android:text="@string/harga_tiket"/>

                <TextView
                    android:id="@+id/tv_harga_tiket_wisata_detail"
                    style="@style/TextContent.BodyMedium.Gray"
                    android:layout_weight="1"
                    tools:text="@string/detail_harga_tiket"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextContent.BodyMedium.Bold"
                    android:layout_marginEnd="16dp"
                    android:text="@string/jam_buka"/>

                <TextView
                    android:id="@+id/tv_jam_hari_buka_detail"
                    style="@style/TextContent.BodyMedium.Gray"
                    android:layout_weight="1"
                    tools:text="@string/detail_jam_buka"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextContent.BodyMedium.Bold"
                    android:layout_marginEnd="16dp"
                    android:text="@string/alamat"/>

                <TextView
                    android:id="@+id/tv_alamat_wisata_detail"
                    style="@style/TextContent.BodyMedium.Gray"
                    android:layout_weight="1"
                    tools:text="@string/detail_alamat"/>
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/btn_google_maps_wisata_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/button"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </LinearLayout>

</ScrollView>